2012-10-08  Frank Warmerdam  <warmerdam@google.com>

	* geo_normalize.c/geo_normalize.h: Add support for disabling the
	TOWGS84 parameter support if GEO_NORMALIZE_DISABLE_TOWGS84 is
	defined.  This is primary intended to maintain binary compatability
	of the GTIFDefn structure with older versions (for MrSID compat for
	instance).  No configure support - you need to manually incorporate
	into geo_config.h or perhaps geo_normalize.h.  (gdal #3309)

2012-05-15  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: for now treat method 9829 (Polar Stereographic 
	Variant B) the same as 9810 - as CT_PolarStereographic.  

2012-05-08  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_ctrans.inc, geo_normalize.c: Add CT_HotineObliqueMercatorAzimuthCenter.

2012-05-06  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Correct GTIFGetDefn() so that user defined
	linear units are properly read.  Add user defined linear units
	to definition report. (#51)

2012-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* Another crack at a 1.4.0 release.

2011-10-06  Frank Warmerdam  <warmerdam@pobox.com>

	* Add some missing csv files in svn, fix Makefile.am (#46)

2011-09-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Makefile.am: add various missing csv/*.csv files to dist list.

2011-09-17  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/*.csv: Upgrade to EPSG 7.9.

2011-06-15  Frank Warmerdam  <warmerdam@pobox.com>

	* LICENSE: updated to latest EPSG terms of use details which 
	clarify commercial use allowed.

2011-05-23  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Treat 1027 as equivelent to 9820 (LAEA)
	http://trac.osgeo.org/gdal/ticket/3828

	* csv/pcs.override.csv: Fix to include coord_sys_code field to match
	pcs.csv and fixes serious issue with EPSG:26799.

	* Prepare libgeotiff 1.4.0 release.

	* Makefile.am: Do not distribute geo_config.h - it should be generated.

	* bin/csv2html.c: Removed (#6) 
